[project]
name = "momentary"
version = "0.1.0"
description = "AI-powered cartoon stick-figure video generation system"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Karan Ratta" }]
dependencies = [
    "openai>=1.0.0",
    "fal-client>=0.4.0",
    "elevenlabs>=1.0.0",
    "moviepy>=1.0.3",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "streamlit>=1.28.0",
]

[project.scripts]
momentary = "momentary.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/momentary"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
